# officeparser3

./: .gitignore  officeparser3.py  pyproject.toml
