[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "officeparser3"
version = "3.0.0"
description = "A python script that parses the format of OLE compound documents used by Microsoft Office applications."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Davison", email = "unixfreak0037@gmail.com"}
]
keywords = ["Microsoft Office", "ole", "vba", "macro"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/unixfreak0037/officeparser3"

[project.scripts]
officeparser3 = "officeparser3:_main"

[tool.setuptools]
py-modules = ["officeparser3"] 